# open_study_study_llm

./: .example_env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
axum-graphql-seaorm/: Cargo.toml
entity/: Cargo.toml
entity/src/: audit_logs.rs  cart.rs  cart_items.rs  categories.rs  delivery.rs  discounts.rs  mod.rs  order_items.rs  orders.rs  password_reset_tokens.rs  payments.rs  prelude.rs  products.rs  reviews.rs  sea_orm_active_enums.rs  token_verifcation.rs  users.rs
migration/: Cargo.toml  init.sql  user_schema.sql
migration/src/: lib.rs  m20220101_000001_users_table.rs  m20240921_201000_Token_Verifcation.rs  m20240922_122042_passwordresettokens.rs  m20240928_182418_cart_table.rs  m20240928_182418_categories_table.rs  m20240928_182418_create_audit_logs_table.rs  m20240928_182418_discounts_table.rs  m20240928_182418_orders_table.rs  m20240928_182418_products_table.rs  m20240928_182418_reviews_table.rs  main.rs
src/: app_state.rs  lib.rs  main.rs  query_root.rs
src/api_middleware/: admin_midleware.rs  auth_middleware.rs  mod.rs
src/db/: connection.rs  mod.rs
src/handler/: auth.rs  auth_handler.rs  cart_handler.rs  cart_item_handler.rs  categories_handler.rs  discounts_handler.rs  mod.rs  oder_handler.rs  order_handler.rs  order_items_handler.rs  product_handler.rs  reviews_handler.rs  users.rs  users_handler.rs
src/mail/: mails.rs  sendmail.rs
src/middleware/: auth_middleware.rs  mod.rs
src/routes/: hello_server.rs  mod.rs
src/routes/v1/: auth_route.rs  cart_item_route.rs  cart_route.rs  category_route.rs  discount_route.rs  mod.rs  oder_items_route.rs  oder_route.rs  order_route.rs  product_route.rs  review_route.rs  users_route.rs
src/routes/v2/: mod.rs
src/utilities/: hash.rs  jwt.rs  mod.rs
