[package]
name = "openstudystudyllm"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity",   "migration"]


[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "full"] }
axum = { version = "0.7.7", features = ["macros", "multipart"] }
tower-http = { version = "0.6.1", features = ["cors", "fs", "full"] }

serde = { version = "1.0.210", features = ["derive"] }
sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "runtime-tokio-rustls","seaography"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
jsonwebtoken = "9.2.0"
axum-extra = { version = "0.9.4", features = ["cookie", "typed-header"] }
serde_json = "1.0.128"
rand_core = { version = "0.6.4", features = ["std"] }
lazy_static = "1.5.0"
bcrypt = "0.15.0"
reqwest = { version = "0.12.7", features = ["json"] }
futures = "0.3.30"
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
f = "0.2.0"
full = "0.3.0"
state = "0.6.0"
dotenvy_macro = "0.15.7"
anyhow = "1.0.89"
log = "0.4.22"
rand = "0.8.5"
dotenvy = "0.15.7"
lettre = "0.11.9"
async-graphql = { version = "7.0.11", features = ["decimal", "chrono", "dataloader", "dynamic-schema"] }
async-graphql-axum = "7.0.11"


[dependencies.seaography]
version = "1.0.0" # seaography version
features = ["with-decimal", "with-chrono"]


