[package]
name = "entity"
version = "0.1.0"
edition = "2021"

[lib]
name = "entity"
path = "src/mod.rs"


[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
async-graphql = { version = "7.0.10", features = ["decimal", "chrono", "dataloader", "dynamic-schema"] }


[dependencies.sea-orm]
#path = "../../../" # remove this line in your own project
version = "1.0.1" # sea-orm



[dependencies.seaography]
version = "1.0.0" # seaography version
features = ["with-decimal", "with-chrono"]